# neuro_curvature

./: .gitignore  2-class.py  README.md  figure_sujip.py  main.py  pyproject.toml
notebooks/: expr(260217).ipynb  expr(260218).ipynb  expr(260219).ipynb  expr(260220).ipynb  expr(260221).ipynb
src/: data_loader.py  features.py  models.py  noise.py  preprocess.py  train.py  utils.py  visualization.py
src/core/: geometry.py  preprocess.py
src/data/: dataset.py  encoder.py
src/models/: snn.py
