[project]
name = "neuro-curvature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "mne>=1.11.0",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "pyriemann>=0.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "snntorch>=0.9.4",
    "torch>=2.10.0",
]
